--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="gray_100">#f5f5f5</color>
+    <color name="gray_200">#DBDBDB</color>
+    <color name="gray_300">#c2c2c2</color>
+    <color name="gray_400">#BDBDBD</color>
+    <color name="gray_500">#757575</color>
 </resources>
