--- a/app/src/main/res/layout/item_search.xml
+++ b/app/src/main/res/layout/item_search.xml
@@ -23,8 +23,8 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
         <ImageView
             android:id="@+id/likeBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_marginStart="8dp"
             android:src="@drawable/ic_unlike"
             app:layout_constraintStart_toEndOf="@id/imageView"
@@ -45,7 +45,7 @@
             android:id="@+id/dateTime"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="12dp"
             android:text="@{item.date()}"
             app:layout_constraintBottom_toBottomOf="@id/imageView"
             app:layout_constraintStart_toEndOf="@id/imageView"
