--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -15,22 +15,24 @@
         <EditText
             android:id="@+id/searchEditText"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginTop="8dp"
-            android:backgroundTint="@color/teal_700"
+            android:hint="@string/string_search_hint"
+            android:textColorHint="@color/gray_300"
+            android:backgroundTint="@color/blue_500"
+            android:textCursorDrawable="@drawable/design_edittext_cursor"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/searchButton"/>
+            app:layout_constraintEnd_toEndOf="parent"/>
         <ImageView
             android:id="@+id/searchButton"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginStart="8dp"
             android:src="@drawable/ic_search"
+            android:layout_marginEnd="8dp"
             app:layout_constraintTop_toTopOf="@id/searchEditText"
             app:layout_constraintBottom_toBottomOf="@id/searchEditText"
-            app:layout_constraintStart_toEndOf="@id/searchEditText"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="@id/searchEditText"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/itemRecyclerView"
